made BotConfig record